syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package cache;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc Clear (ReqParams) returns (Reply) {}
  rpc SetKey (ReqParams) returns (Reply) {}
  rpc GetKey (ReqParams) returns (Reply) {}
}

// The request message containing the user's name.
message ReqParams {
  string key = 1;
  string value = 2;
}

// The response message containing the greetings
message Reply {
  string message = 1;
  bool successful = 2;
}
