syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package cache;

// The greeting service definition.
service database {
  // Sends a greeting
  rpc createUser (ReqParamsCreateUser) returns (Reply) {}
  rpc loginUser  (ReqParamsLoginUser)  returns (Reply) {}
  rpc createNote (ReqParamsCreateNote) returns (Reply) {}
  rpc deleteNote (ReqParamsDeleteNote) returns (Reply) {}
  rpc updateNote (ReqParamsUpdateNote) returns (Reply) {}
  rpc getNote    (ReqParamsGetNote)    returns (GetNotesReply) {}
}

// The request message containing the user's name.
message ReqParamsCreateUser {
  string username = 1;
  string password = 2;
}

message ReqParamsLoginUser {
  string username = 1;
  string password = 2;
}

message ReqParamsCreateNote {
  string text = 1;
  string username = 2;
}

message ReqParamsDeleteNote {
  string username = 1;
  int64 id = 2;
}

message ReqParamsUpdateNote {
  string username = 1;
  int64 id = 2;
  string newtext = 3;
}

message ReqParamsGetNote {
  string username = 1;
  int64 id = 2;
}

message Reply {
  bool successful = 1;
  string message = 2;
}

message GetNotesReply {
  bool successful = 1;
  string text = 2;
}